--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -32,6 +32,7 @@
   .heading {
     padding: 0;
     margin-bottom: 2.5rem;
+    text-align: center;
 
     h2 {
       font-size: 1.6rem;
